Bug 12408 - cli_raw_ntlm_smb_encryption_start() leaks memory.
Summary: cli_raw_ntlm_smb_encryption_start() leaks memory.
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: libsmbclient (show other bugs)
Version: 4.5.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Stefan Metzmacher
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-03 12:56 UTC by Stefan Metzmacher
Modified: 2018-02-09 12:48 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix for master. (2.53 KB, patch)
2016-11-10 00:10 UTC, Jeremy Allison
jra: review? (metze)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2016-11-03 12:56:17 UTC
cli_raw_ntlm_smb_encryption_start() talloc_move's the gensec_security
to the NULL talloc context.
Comment 1 Jeremy Allison 2016-11-10 00:10:00 UTC
Created attachment 12637 [details]
git-am fix for master.

Metze, I think this might do the trick (also fixes the incorrect comments) - can you confirm ?

Jeremy.
Comment 2 Stefan Metzmacher 2018-02-09 12:48:12 UTC
Fixed in d6216b8f375fe553a1dbe9b85da3b994384ac392